# RoboHockeyGame

./: CMakeLists.txt  README.md  package.xml
Documentation/: ._Topics&Services.xlsx  ._Turtlebot RoboHockey.pptx  Services_Definitions  Spielablauf&Services.odt  Topics&Services.xlsx  Topics_Definitions  Turtlebot RoboHockey.pptx
Documentation/Ablaufdiagramme/: ._Nav_Glob.pptx  ._Nav_Local.pptx  .~lock.Nav_Local.pptx#  Nav_Glob.pptx  Nav_Local.pptx
launch/: RoboHockey.launch  driver.launch
msg/: MessageDescription  Pole.msg  Puck.msg
src/ImageProcessing/: ._image_converter.cpp  image_converter.cpp
src/ImageProcessing/DetectionBluePuck/: ._PuckDetection.cpp  PuckDetection.cpp  PuckDetection.h  run_PuckDetection.cpp
src/ImageProcessing/DetectionGreenPole/: PoleDetection.cpp  PoleDetection.h  README.md  run_PoleDetection.cpp
src/ImageProcessing/DetectionRectangle/: RectangleDetection.cpp  RectangleDetection.h  run_RectangleDetection.cpp  run_RectangleDetection.cpp~
src/ImageProcessing/DetectionYellowPuck/: PuckDetection.cpp  PuckDetection.cpp~  PuckDetection.h  README.md  run_PuckDetection.cpp
src/Master/: README.md
src/Nav_Global/: README.md  puck_finder.cpp  puck_finder.h  puck_finder_node.cpp  puck_mover.cpp  puck_mover.h  puck_mover_node.cpp
src/Nav_Global/Old/: puck_mover.cpp  puck_mover.h  puck_mover_node.cpp
src/Nav_Global/Tests/: FindMoveTest.cpp  FinderStartTest.cpp  FinderStatusTest.cpp  FinderStopTest.cpp  MoverStartTest.cpp  MoverStatusTest.cpp  MoverStopTest.cpp
src/Nav_Local/: ._nav_local.cpp  .gitignore  README.md  nav_local.cpp  nav_local.h  run_nav_local.cpp
srv/: CatchStart.srv  CheckPuck.srv  DropStart.srv  DropStatus.srv  DropStop.srv  PuckFinderStart.srv  PuckFinderStatus.srv  PuckFinderStop.srv  PuckMoverStart.srv  PuckMoverStatus.srv  PuckMoverStop.srv  srvPoleDetection.srv  srvPuckDetectionYellow.srv  srvRectangleDetection.srv
